<resources>
    <string name="app_name">Hawk Eye</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Hawk Eye</string>
    <string name="nav_header_subtitle">Intelligent Surveillance System</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_logout">Logout</string>

    <string name="menu_home">Home</string>
    <string name="menu_org">Organization</string>
    <string name="menu_employees">Employees</string>
    <string name="menu_unknown_person">Strangers</string>
    <string name="menu_about">About Us</string>
    <string name="menu_auth">Authorized Access</string>
    <string name="menu_unAuth">Unauthorized Access</string>
    <string name="menu_unknown_access">Stranger Access</string>
    <string name="menu_today">Today</string>
    <string name="menu_yesterday">Yesterday</string>
</resources>