<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_org"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_org" />
        <item
            android:id="@+id/nav_employees"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_employees" />
        <item
            android:id="@+id/nav_unknow_person"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_unknown_person" />
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_about" />

    </group>
</menu>